css/ingame.css
/** general **/
p {
    margin: auto;
}

/** champ card header **/
th.blue {
    background-color: #45A9F1;
}

th.red {
    background-color: #FF5859;
}

/** champ card **/
table.champ {
    margin: 3px;
    background-color: #F3F5F8;
    box-shadow: 0px 0px 6px #999;
}

.champ-icon-container {
    width: 45px;
    padding: 5px;
    float: left;
}

img.champ-icon {
    width: 100%;
}

.spells-cdr-holder {
    width: 100px;
    height: 45px;
}

.spells-cdr-cell {
    height: 45px;
}

.spells-cdr-cell img {
    margin:auto;
}

.spells-cdr-cell > div {
    display:inline;
}

/** cdr elements **/
.cdr p {
    color: #8A8F94;
}

.cdr {
    display:none;
}

.cdr p {
    font-size: 0.9rem;
}

.cdr img {
    height: 20px;
    width: 20px;
    border-radius: 90px;
}

.items {
    width: 100px;
    /* display: inline-flex; */
}
.runes {
    width: 60px;
    /* display: inline-flex; */
}

.items,
.runes,
.abilities-cdr-cell > td,
.ultimate-cdr-cell > td{
    position: relative;
}

.kill-count-container {
    width: 100px;
}

.cloud-stacks-container {
    width: 60px;
}

.spells-cdr-value {
    margin-left: 10px;
}

img[alt="statmodscdrscaling"] {
    background-color: black;
}

/** spells **/
div.spells {
    display: flex;
    font-size: 0.7em;
    float: right;
    text-align: center;
}

.spells img {
    height:25px;
}

/** ABILITIES **/

.abilities {
    margin: 0px;
    width:200px;
    text-align:center;
}

img.ability-icon {
    height: 25px;
}

.abilities td {
    width:100%;
}

div.ability-img-container {
    position: relative;
    top: 0;
    margin:auto;
    width: fit-content;
}

.ability-icon {
    position: relative;
    top: 0;
    left: 0;
}

.info {
    position: absolute;
    left: 80%;
    height: 1.5vh;
}

.cooldowns > p.cooldown {
    display: inline;
    font-size: 0.9em;
    background-color: #FFF;
    text-align: center;
}

.cooldowns:first-child:nth-last-child(1) p {
    width: 100%;
}
.cooldowns:first-child:nth-last-child(2) p {
    width: 50%;
}
.cooldowns:first-child:nth-last-child(3) p {
    width: 33.333%;
}
.cooldowns:first-child:nth-last-child(4) p {
    width: 25%;
}
.cooldowns:first-child:nth-last-child(5) p {
    width: 20%;
}

p small:not(:empty) {
    font-size: 0.7em;
}

